[package]
name = "miro"
version = "0.0.0-experimental.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
serde = { version = "1.0.145", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.60"
features = ["console"]

[dependencies.image]
version = "0.24.4"
default-features = false
features = ["jpeg", "png"]
